--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
     android:id="@+id/drawer_layout"
     tools:context=".activities.MainActivity">
     
-    <com.google.android.material.navigation.NavigationView
+<!--    <com.google.android.material.navigation.NavigationView-->
 
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:headerLayout="@layout/menu_layout_header"
-        app:menu="@menu/main_menu"
-        android:id="@+id/nav_view"
-        android:layout_gravity="start"/>
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:headerLayout="@layout/menu_layout_header"-->
+<!--        app:menu="@menu/main_menu"-->
+<!--        android:id="@+id/nav_view"-->
+<!--        android:layout_gravity="start"/>-->
     
     <FrameLayout
         android:id="@+id/frame"
