--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,11 +2,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.DashboardFragment"
     android:background="#161F29"
-    android:paddingBottom="100dp">
+    android:paddingBottom="55dp">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,13 +18,13 @@
             android:id="@+id/welcome_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Welcome"
+            android:text="Dashboard"
             android:textColor="@color/white"
             android:fontFamily="@font/lato_bold"
             android:textSize="28sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_margin="20dp"/>
+            android:layout_margin="25dp"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/active_card"
@@ -70,9 +70,10 @@
                     <ImageView
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@mipmap/tick"
+                        android:src="@drawable/tick"
                         android:layout_gravity="center"
-                        android:layout_marginStart="10dp"/>
+                        android:layout_marginStart="10dp"
+                        android:tint="#D3FC51"/>
 
                 </LinearLayout>
 
@@ -165,7 +166,7 @@
                     android:text="Find a charging station"/>
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="30dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/arrow"/>
 
@@ -189,7 +190,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="15dp"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -202,6 +205,16 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"/>
 
+                <ImageView
+                    android:id="@+id/down_arrow"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/baseline_arrow_back_ios_24"
+                    android:rotation="-90"
+                    android:layout_marginStart="10dp"
+                    android:scaleType="centerCrop"
+                    android:layout_gravity="center" />
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -211,8 +224,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/all_para_card"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginStart="20dp"
             android:backgroundTint="#2F4662"
             app:cardCornerRadius="15dp"
@@ -354,13 +369,14 @@
 
         <ImageView
             android:id="@+id/bike_img"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
             android:layout_height="350dp"
-            android:src="@mipmap/bike"
+            android:src="@drawable/bike_img"
             app:layout_constraintLeft_toRightOf="@id/active_card"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="1"
-            app:layout_constraintTop_toTopOf="@id/active_card" />
+            app:layout_constraintTop_toTopOf="@id/active_card"
+            android:contentDescription="TODO" />
 
 
 
