Separate Permissions Screen Added!

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -47,8 +47,8 @@
         android:drawablePadding="10dp"
         android:ems="10"
         android:textSize="14sp"
-        android:hint="User Name"
-        android:inputType="textEmailAddress"
+        android:hint="Full Name"
+        android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingTop="8dp"
         android:paddingRight="20dp"
