--- a/app/src/main/res/drawable/white_button_bg.xml
+++ b/app/src/main/res/drawable/white_button_bg.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <corners android:radius="30dp"/>
-            <solid android:color="#7A63FE"/>
+            <solid android:color="#ECECEC"/>
+            <corners android:radius="15dp"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <corners android:radius="30dp"/>
-            <solid android:color="#9785FF"/>
+            <solid android:color="#E0DDE0"/>
+            <corners android:radius="15dp"/>
         </shape>
     </item>
 </selector>
