--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,17 +21,6 @@
         android:layout_marginTop="20dp"/>
 
 
-    <LinearLayout
-        android:id="@+id/underline"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:orientation="horizontal"
-        android:background="@color/design_default_color_primary"
-        app:layout_constraintLeft_toLeftOf="@id/start_riding"
-        app:layout_constraintRight_toRightOf="@id/start_riding"
-        app:layout_constraintTop_toBottomOf="@id/start_riding"
-        android:layout_marginTop="20dp"/>
-
     <EditText
         android:id="@+id/edtEmailAddress"
         android:layout_width="0dp"
@@ -43,19 +32,20 @@
         android:drawablePadding="10dp"
         android:ems="10"
         android:textSize="14sp"
+        android:fontFamily="@font/lato"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
-        android:paddingLeft="20dp"
+        android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textColorHint="#736E6E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintVertical_bias="0.3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/underline"
+        app:layout_constraintTop_toBottomOf="@+id/start_riding"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <EditText
@@ -66,15 +56,16 @@
         android:background="@drawable/input_bg"
         android:ems="10"
         android:textSize="14sp"
+        android:fontFamily="@font/lato"
         android:drawableLeft="@drawable/ic_baseline_security_24"
         android:drawablePadding="10dp"
         android:hint="Enter Password"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
+        android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textColorHint="#736E6E"
         app:layout_constraintEnd_toEndOf="@+id/edtEmailAddress"
         app:layout_constraintStart_toStartOf="@+id/edtEmailAddress"
@@ -114,6 +105,6 @@
         android:textColor="@color/white"
         android:fontFamily="@font/lato"
         android:textSize="16sp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="20dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
