--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,7 +44,7 @@
             android:id="@+id/logout_btn"
             android:layout_width="200dp"
             android:layout_height="48sp"
-            android:layout_marginTop="11dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/colored_button"
             android:fontFamily="@font/karla_bold"
             android:text="Logout"
@@ -55,7 +55,7 @@
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            app:layout_constraintTop_toBottomOf="@+id/lin"
             app:layout_constraintVertical_bias="0.852" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -126,28 +126,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:textAlignment="center"
                 android:fontFamily="@font/inter_semibold"
                 android:text="Trivikram Srinivas"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/karla_bold"
-                android:text="The Mantra goes here"
-                android:textAlignment="center"
-
-                android:textColor="@color/white"
-                android:textSize="18dp" />
-
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/logout_btn"
             app:layout_constraintEnd_toEndOf="parent"
@@ -195,6 +188,7 @@
                     </TextView>
 
                     <TextView
+                        android:id="@+id/mail"
                         android:layout_width="300dp"
                         android:layout_height="20dp"
                         android:layout_marginStart="25dp"
